--- a/Templates/Designs/TTonlineNew/Page.cshtml
+++ b/Templates/Designs/TTonlineNew/Page.cshtml
@@ -388,14 +388,19 @@
 
 @helper RenderCereOfertaButton()
 {
+  var termeniSiContitiiPageUrl = "/Default.aspx?ID=" + GetPageIdByNavigationTag("termsAndConditions");
   <!-- Large modal -->
-  <button class="btn btn-primary" data-toggle="modal" data-target="#modalformularoferta" id="buton-modal-cere-detalii">@Translate("askForDetails","Cere detalii sau oferta")</button>
+  <button class="btn btn-primary test" data-toggle="modal" data-target="#modalformularoferta" id="buton-modal-cere-detalii">@Translate("askForDetails","Cere detalii sau oferta")</button>
   
   <div class="modal fade bd-example-modal-sm" id="modalformularoferta" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="background-color:rgba(255,255,255, 0.7);">
     <div class="modal-dialog modal-sm">
       <div class="modal-content">
         <div data-nume="test" class="form-wrapper">
           @RenderParagraphContent(120)
+          <div class="display-flex hidden">
+          		<input class="subscribe-checkbox" type="checkbox" id="Suntdeacordcutermeniisiconditiilettonlinero" name="Suntdeacordcutermeniisiconditiilettonlinero" required checked="checked"/>
+          		<p>	@Translate("SuntDeAcord", "Sunt de acord cu ") <a class="termeniSiConditiiUrl" href="@termeniSiContitiiPageUrl">@Translate("termenii si conditiile")</a> @Translate("ttonline.ro") </p>
+          	</div>	          	
         </div>
       </div>
     </div>
