--- a/Templates/Designs/TTonlineNew/css/10_custom/00_style.css
+++ b/Templates/Designs/TTonlineNew/css/10_custom/00_style.css
@@ -679,8 +679,8 @@ body.background-image4{ background-image: url('../img/bg4.jpg'); }
 #map-canvas {
   width:100%;
   height: 300px;
-  margin: 0px 0px 30px;
-  padding: 0px
+  margin: 0 0 30px;
+  padding: 0px;
 }
 
 
@@ -6486,7 +6486,7 @@ li.active a{
     font-size: 17px;
     line-height: 21px;
     text-align: center; 
-  	margin: 15px 1;	
+  	margin: 15px;	
 }
 
 
