--- a/Templates/Designs/TTonlineNew/Forms/Form/DefaultForm.cshtml
+++ b/Templates/Designs/TTonlineNew/Forms/Form/DefaultForm.cshtml
@@ -61,6 +61,9 @@
                 color: red;
                 margin-top: 10px;
             }
+            .formtable a{
+                color: #ffa700;
+            }
 
     @if (formLabelBold)
     {
