--- a/Templates/Designs/TTonlineNew/Paragraph/New_CaruselProduseHomepage.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_CaruselProduseHomepage.cshtml
@@ -149,7 +149,7 @@
                   <div class="row">
                       <div class="col-xs-12 col-butoane-lista">
                           <div class="col-xs-6">
-                              <a href data-toggle="modal" data-target="#modalformularoferta1" class="buton-oferta-lista">
+                              <a href data-toggle="modal" data-target="#modalformularoferta1" class="buton-oferta-lista" data-product-link="@GetGlobalValue("Global:Request.Host"){{link}}">
                                 <span class="detalii-produs">
                                   <text>@Translate("Cere Oferta", "Cere Oferta")</text>
                                 </span>
@@ -264,7 +264,7 @@
                   <div class="row">
                       <div class="col-xs-12 col-butoane-lista">   
                           <div class="col-xs-6">
-                              <a href data-toggle="modal" data-target="#modalformularoferta1" class="buton-oferta-lista">
+                              <a href data-toggle="modal" data-target="#modalformularoferta1" class="buton-oferta-lista" data-product-link="@GetGlobalValue("Global:Request.Host"){{link}}">
                                 <span class="detalii-produs">
                                   <text>@Translate("Cere Oferta", "Cere Oferta")</text>
                                 </span>
