--- a/Templates/Designs/TTonlineNew/New_SectionLandingPage.cshtml
+++ b/Templates/Designs/TTonlineNew/New_SectionLandingPage.cshtml
@@ -433,7 +433,7 @@ string filterValue8= "Item.Tip='Articole'";
           <div class="row">
               <div class="col-xs-12 col-butoane-lista">                             
                   <div class="col-xs-6">    
-                      <a href data-toggle="modal" data-target="#modalformularoferta1" class="buton-oferta-lista">
+                      <a href data-toggle="modal" data-target="#modalformularoferta1" class="buton-oferta-lista" data-product-link="@GetGlobalValue("Global:Request.Host"){{link}}">
                         <span class="detalii-produs">
                           <text>@Translate("Cere Oferta", "Cere Oferta")</text>
                         </span>
@@ -542,7 +542,7 @@ string filterValue8= "Item.Tip='Articole'";
         <div class="row">
           <div class="col-xs-12 col-butoane-lista">                  
               <div class="col-xs-6">
-                  <a href data-toggle="modal" data-target="#modalformularoferta1" class="buton-oferta-lista">
+                  <a href data-toggle="modal" data-target="#modalformularoferta1" class="buton-oferta-lista" data-product-link="@GetGlobalValue("Global:Request.Host"){{link}}">
                     <span class="detalii-produs">
                       <text>@Translate("Cere Oferta", "Cere Oferta")</text>
                     </span>
