- fix product link in form

--- a/Templates/Designs/TTonlineNew/LandingPageCompanii.cshtml
+++ b/Templates/Designs/TTonlineNew/LandingPageCompanii.cshtml
@@ -46,7 +46,7 @@
    </div>
 </div>
 <!-- Google Analytics -->
-
+@RenderSnippet("ProductCarouselModal")
 <script>
 
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
