--- a/Templates/Designs/TTonlineNew/Page.cshtml
+++ b/Templates/Designs/TTonlineNew/Page.cshtml
@@ -318,7 +318,7 @@
                    </div>
                    <div class="author-info">
                      <h3><a href="/Default.aspx?ID=@autorPage&autor={{autorId}}">{{name}}</a></h3>
-                       <p class="author-bio">{{description}}</p>
+                       <p class="author-bio">{{{description}}}</p>
                    </div>
                  </div>
           {{/ifCond}}     
