--- a/Templates/Designs/TTonlineNew/Paragraph/CaruselProduseHomepage.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/CaruselProduseHomepage.cshtml
@@ -267,13 +267,13 @@ if(Dealer != "" || Producator != ""){
         </div>
         <div class="row row-promotii-produs">
             <div class="col-xs-12">
-                if(AfisarePromotie == "True"){
+                @if(AfisarePromotie == "True"){
                       <div class="promotie">
                         <span class="detalii-produs" ><text><strong>@Translate("Promotie", "Promotie")</strong></text></span>
                       </div>
                 }
             
-                if(priceProductDB > 0 ){
+                @if(priceProductDB > 0 ){
                     <div class="pret-produs pull-right">
                         <a href="@productLink">
                         <span class="detalii-produs" ><text>@priceProductDB LEI</text></span>
