--- a/Templates/Designs/TTonlineNew/css/10_custom/New_Homepage.css
+++ b/Templates/Designs/TTonlineNew/css/10_custom/New_Homepage.css
@@ -477,6 +477,9 @@
     #LoopStiri {
         padding: 15px;
     }
+    .subheader img {
+        height: auto;
+    }
 }
 .sticker-promotie {
     background-color: red;
