--- a/Templates/Designs/TTonlineNew/Forms/Mail/IBSConfirmationEmail.cshtml
+++ b/Templates/Designs/TTonlineNew/Forms/Mail/IBSConfirmationEmail.cshtml
@@ -241,7 +241,8 @@
 															<tr>
 																<td width="30" height="30" align="right">
 																	<a target="_blank" href="@requestUrl">
-																		<img src="@requestUrl/Files/Files/ibs_l-01_720.png" alt="" border="0" style="display:block; border:none; outline:none; text-decoration:none;height: 100px;" /><!--@requestUrl/Admin/Module/BasicForms/Logo.png-->
+																	
+																		<img src="@requestUrl/Admin/Public/GetImage.ashx?Image=/Files/Files/ibs_l-01_720.png&Width=100&Height=100&Crop=5" alt="" border="0" style="display:block; border:none; outline:none; text-decoration:none;" /><!--@requestUrl/Admin/Module/BasicForms/Logo.png-->
 																	</a>
 																</td>
 															</tr>
