--- a/Templates/Designs/TTonlineNew/Master.cshtml
+++ b/Templates/Designs/TTonlineNew/Master.cshtml
@@ -299,7 +299,7 @@ var google_remarketing_only = true;
 <script type="text/javascript" src="/Files/Templates/Designs/TTOnlineNew/js/minified/00_libraries/00_handlebars.js"></script> 
 <script type="text/javascript" src="/Files/Templates/Designs/TTOnlineNew/js/minified/00_libraries/05_axios.js"></script> 
 <script type="text/javascript" src="/Files/Templates/Designs/TTOnlineNew/js/minified/00_libraries/10_es6promise.js"></script> 
-<script type="text/javascript" src="/Files/Templates/Designs/TTOnlineNew/js/minified/05_custom/00_main.js"></script> 
+<script type="text/javascript" src="/Files/Templates/Designs/TTOnlineNew/js/minified/05_custom/00_main.min.js"></script> 
 <script type="text/javascript" src="/Files/Templates/Designs/TTOnlineNew/js/minified/05_custom/05_handlebarsHelper.min.js"></script> 
 
 <noscript>
